src/objects/Competitor_Products__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Size__c</fullName>
        <label>Competitor Size</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_code__c</fullName>
        <label>Product code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Competitor Product</label>
    <nameField>
        <label>Competitor Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>